# claudeson_2026

./: .gitignore  CLAUDE.md  COMMERCIAL_LICENSE  LICENSE  README.md  REVIEW_REPORT.md  claudson.py  claudson_abstraction.py  claudson_agent_swarm.py  claudson_causal_world.py  claudson_dual_path.py  claudson_extended.py  claudson_formal_verification.py  claudson_grounded.py  claudson_grounded_language.py  claudson_infinite.py  claudson_jedi.py  claudson_meta_learning.py  claudson_metacurriculum.py  claudson_orchestrator.py  claudson_perception_sidecar.py  claudson_pro.py  claudson_rsi_controller.py  claudson_social_alignment.py  claudson_sovereign.py  claudson_temporal_reasoning.py  claudson_token_fusion.py  claudson_tracer.py  claudson_trainer.py  claudson_transcendent.py  claudson_types.py  claudson_ultimate.py  claudson_uncertainty.py  claudson_utils.py  claudson_worldfm_adapter.py  grafana_gcp_dashboard.json  pyproject.toml  test_claudson_jedi.py  test_dual_path.py  test_new_modules.py  (+3 more)
.github/workflows/: ci.yml
